Archive2/ef/65cf54155ebac6/output
main.cpp: In function 'int main()':
main.cpp:22:61: error: conversion from 'std::_Bind_helper<false, void (&)(int&, int&, const int&), int&, int*, int&>::type {aka std::_Bind<void (*(int, int*, int))(int&, int&, const int&)>}' to non-scalar type 'std::function<void()>' requested
     std::function<void()> bound_l = std::bind(f, n1, &n2, n3);
                                                             ^
